# coding-challenges

./: CMakeLists.txt  LICENSE
include/: lc_121_besttime.hpp  lc_169_majority.hpp  lc_283_movezeroes.hpp  lc_328_oddevenlinked.hpp  lc_371_sumintegers.hpp  lc_73_setmatrixzeros.hpp  lc_771_jewels.hpp  lc_7_reverseinteger.hpp  lc_832_flipping.hpp  lc_859_buddystrings.hpp  lc_914_xofakind.hpp  lc_917_reverseonlyletters.hpp  linked_list.hpp  st_binary_tree.hpp
test/: test_lc_121_besttime.cpp  test_lc_169_majority.cpp  test_lc_283_movezeroes.cpp  test_lc_328_oddevenlinked.cpp  test_lc_371_sumintegers.cpp  test_lc_73_setmatrixzeros.cpp  test_lc_771_jewels.cpp  test_lc_7_reverseinteger.cpp  test_lc_832_flipping.cpp  test_lc_859_buddystrings.cpp  test_lc_914_xofakind.cpp  test_lc_917_reverseonlyletters.cpp  test_linked_list.cpp  test_st_binary_tree.cpp
